overflow problem fixed due to skewed image

--- a/shared.css
+++ b/shared.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   height: 100%;
+  overflow-x: hidden;
 }
 
 *,
@@ -13,6 +14,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   height: 100%;
+  overflow-x: hidden;
   display: grid;
   grid-template-rows: fit-content(3.5rem) auto fit-content(30px);
   grid-template-areas: "header"
